src/test/deca/context/valid/test_printx.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2024

{
        printx("Hello, world!");
        printx(12);
        printx(12.34);
}
